// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Grouped columns headers should cope with very long group names 1`] = `
"                                        ┌──────────────┐
 [37m [0m[01m                                     [0m │[37m [0m[01m VERY LONG  [0m │
┌────┬────┬────┬─────────┬────┬────┬────┼────┬─────────┤
│[37m [0m[01m A[0m │[37m [0m[01m B[0m │[37m [0m[01m C[0m │[37m [0m[01m      D[0m │[37m [0m[01m E[0m │[37m [0m[01m F[0m │[37m [0m[01m G[0m │[37m [0m[01m H[0m │[37m [0m[01m      I[0m │
├────┼────┼────┼─────────┼────┼────┼────┼────┼─────────┤
│[37m [0m[37mA1[0m │[37m [0m[37mB1[0m │[37m [0m[37mC1[0m │[37m [0m[37m     D1[0m │[37m [0m[37mE1[0m │[37m [0m[37mF1[0m │[37m [0m[37mG1[0m │[37m [0m[37mH1[0m │[37m [0m[37mI 00001[0m │
│[37m [0m[37mA2[0m │[37m [0m[37mB2[0m │[37m [0m[37mC2[0m │[37m [0m[37mD 00002[0m │[37m [0m[37mE2[0m │[37m [0m[37mF2[0m │[37m [0m[37mG2[0m │[37m [0m[37mH2[0m │[37m [0m[37m     I2[0m │
└────┴────┴────┴─────────┴────┴────┴────┴────┴─────────┘"
`;

exports[`Grouped columns headers should ignore headers only made of placeholders 1`] = `
"┌────┬────┬────┬─────────┬────┬────┬────┬────┬─────────┐
│[37m [0m[01m A[0m │[37m [0m[01m B[0m │[37m [0m[01m C[0m │[37m [0m[01m      D[0m │[37m [0m[01m E[0m │[37m [0m[01m F[0m │[37m [0m[01m G[0m │[37m [0m[01m H[0m │[37m [0m[01m      I[0m │
├────┼────┼────┼─────────┼────┼────┼────┼────┼─────────┤
│[37m [0m[37mA1[0m │[37m [0m[37mB1[0m │[37m [0m[37mC1[0m │[37m [0m[37m     D1[0m │[37m [0m[37mE1[0m │[37m [0m[37mF1[0m │[37m [0m[37mG1[0m │[37m [0m[37mH1[0m │[37m [0m[37mI 00001[0m │
│[37m [0m[37mA2[0m │[37m [0m[37mB2[0m │[37m [0m[37mC2[0m │[37m [0m[37mD 00002[0m │[37m [0m[37mE2[0m │[37m [0m[37mF2[0m │[37m [0m[37mG2[0m │[37m [0m[37mH2[0m │[37m [0m[37m     I2[0m │
└────┴────┴────┴─────────┴────┴────┴────┴────┴─────────┘"
`;

exports[`Grouped columns headers should render consecutive groups 1`] = `
"┌─────────┬──────────────┬─────────────────────────────┐
│[37m [0m[01m  G1   [0m │[37m [0m[01m     G2     [0m │[37m [0m[01m            G3             [0m │
├────┬────┼────┬─────────┼────┬────┬────┬────┬─────────┤
│[37m [0m[01m A[0m │[37m [0m[01m B[0m │[37m [0m[01m C[0m │[37m [0m[01m      D[0m │[37m [0m[01m E[0m │[37m [0m[01m F[0m │[37m [0m[01m G[0m │[37m [0m[01m H[0m │[37m [0m[01m      I[0m │
├────┼────┼────┼─────────┼────┼────┼────┼────┼─────────┤
│[37m [0m[37mA1[0m │[37m [0m[37mB1[0m │[37m [0m[37mC1[0m │[37m [0m[37m     D1[0m │[37m [0m[37mE1[0m │[37m [0m[37mF1[0m │[37m [0m[37mG1[0m │[37m [0m[37mH1[0m │[37m [0m[37mI 00001[0m │
│[37m [0m[37mA2[0m │[37m [0m[37mB2[0m │[37m [0m[37mC2[0m │[37m [0m[37mD 00002[0m │[37m [0m[37mE2[0m │[37m [0m[37mF2[0m │[37m [0m[37mG2[0m │[37m [0m[37mH2[0m │[37m [0m[37m     I2[0m │
└────┴────┴────┴─────────┴────┴────┴────┴────┴─────────┘"
`;

exports[`Grouped columns headers should render consecutive groups with a placeholder at the end 1`] = `
"┌─────────┬──────────────┬───────────────────┐
│[37m [0m[01m  G1   [0m │[37m [0m[01m     G2     [0m │[37m [0m[01m       G3        [0m │[37m [0m[01m       [0m  
├────┬────┼────┬─────────┼────┬────┬────┬────┼─────────┐
│[37m [0m[01m A[0m │[37m [0m[01m B[0m │[37m [0m[01m C[0m │[37m [0m[01m      D[0m │[37m [0m[01m E[0m │[37m [0m[01m F[0m │[37m [0m[01m G[0m │[37m [0m[01m H[0m │[37m [0m[01m      I[0m │
├────┼────┼────┼─────────┼────┼────┼────┼────┼─────────┤
│[37m [0m[37mA1[0m │[37m [0m[37mB1[0m │[37m [0m[37mC1[0m │[37m [0m[37m     D1[0m │[37m [0m[37mE1[0m │[37m [0m[37mF1[0m │[37m [0m[37mG1[0m │[37m [0m[37mH1[0m │[37m [0m[37mI 00001[0m │
│[37m [0m[37mA2[0m │[37m [0m[37mB2[0m │[37m [0m[37mC2[0m │[37m [0m[37mD 00002[0m │[37m [0m[37mE2[0m │[37m [0m[37mF2[0m │[37m [0m[37mG2[0m │[37m [0m[37mH2[0m │[37m [0m[37m     I2[0m │
└────┴────┴────┴─────────┴────┴────┴────┴────┴─────────┘"
`;

exports[`Grouped columns headers should render consecutive groups with a placeholder at the start 1`] = `
"     ┌─────────┬──────────────┬────────────────────────┐
 [37m [0m[01m  [0m │[37m [0m[01m  G1   [0m │[37m [0m[01m     G2     [0m │[37m [0m[01m          G3          [0m │
┌────┼────┬────┼─────────┬────┼────┬────┬────┬─────────┤
│[37m [0m[01m A[0m │[37m [0m[01m B[0m │[37m [0m[01m C[0m │[37m [0m[01m      D[0m │[37m [0m[01m E[0m │[37m [0m[01m F[0m │[37m [0m[01m G[0m │[37m [0m[01m H[0m │[37m [0m[01m      I[0m │
├────┼────┼────┼─────────┼────┼────┼────┼────┼─────────┤
│[37m [0m[37mA1[0m │[37m [0m[37mB1[0m │[37m [0m[37mC1[0m │[37m [0m[37m     D1[0m │[37m [0m[37mE1[0m │[37m [0m[37mF1[0m │[37m [0m[37mG1[0m │[37m [0m[37mH1[0m │[37m [0m[37mI 00001[0m │
│[37m [0m[37mA2[0m │[37m [0m[37mB2[0m │[37m [0m[37mC2[0m │[37m [0m[37mD 00002[0m │[37m [0m[37mE2[0m │[37m [0m[37mF2[0m │[37m [0m[37mG2[0m │[37m [0m[37mH2[0m │[37m [0m[37m     I2[0m │
└────┴────┴────┴─────────┴────┴────┴────┴────┴─────────┘"
`;

exports[`Grouped columns headers should render consecutive groups with a placeholder in between 1`] = `
"┌─────────┬──────────────┐    ┌────────────────────────┐
│[37m [0m[01m  G1   [0m │[37m [0m[01m     G2     [0m │[37m [0m[01m  [0m │[37m [0m[01m          G3          [0m │
├────┬────┼────┬─────────┼────┼────┬────┬────┬─────────┤
│[37m [0m[01m A[0m │[37m [0m[01m B[0m │[37m [0m[01m C[0m │[37m [0m[01m      D[0m │[37m [0m[01m E[0m │[37m [0m[01m F[0m │[37m [0m[01m G[0m │[37m [0m[01m H[0m │[37m [0m[01m      I[0m │
├────┼────┼────┼─────────┼────┼────┼────┼────┼─────────┤
│[37m [0m[37mA1[0m │[37m [0m[37mB1[0m │[37m [0m[37mC1[0m │[37m [0m[37m     D1[0m │[37m [0m[37mE1[0m │[37m [0m[37mF1[0m │[37m [0m[37mG1[0m │[37m [0m[37mH1[0m │[37m [0m[37mI 00001[0m │
│[37m [0m[37mA2[0m │[37m [0m[37mB2[0m │[37m [0m[37mC2[0m │[37m [0m[37mD 00002[0m │[37m [0m[37mE2[0m │[37m [0m[37mF2[0m │[37m [0m[37mG2[0m │[37m [0m[37mH2[0m │[37m [0m[37m     I2[0m │
└────┴────┴────┴─────────┴────┴────┴────┴────┴─────────┘"
`;

exports[`Grouped columns headers should render consecutive groups with placeholders 1`] = `
"     ┌─────────┐         ┌─────────┬─────────┐
 [37m [0m[01m  [0m │[37m [0m[01m  G1   [0m │[37m [0m[01m       [0m │[37m [0m[01m  G2   [0m │[37m [0m[01m  G3   [0m │[37m [0m[01m       [0m  
┌────┼────┬────┼─────────┼────┬────┼────┬────┼─────────┐
│[37m [0m[01m A[0m │[37m [0m[01m B[0m │[37m [0m[01m C[0m │[37m [0m[01m      D[0m │[37m [0m[01m E[0m │[37m [0m[01m F[0m │[37m [0m[01m G[0m │[37m [0m[01m H[0m │[37m [0m[01m      I[0m │
├────┼────┼────┼─────────┼────┼────┼────┼────┼─────────┤
│[37m [0m[37mA1[0m │[37m [0m[37mB1[0m │[37m [0m[37mC1[0m │[37m [0m[37m     D1[0m │[37m [0m[37mE1[0m │[37m [0m[37mF1[0m │[37m [0m[37mG1[0m │[37m [0m[37mH1[0m │[37m [0m[37mI 00001[0m │
│[37m [0m[37mA2[0m │[37m [0m[37mB2[0m │[37m [0m[37mC2[0m │[37m [0m[37mD 00002[0m │[37m [0m[37mE2[0m │[37m [0m[37mF2[0m │[37m [0m[37mG2[0m │[37m [0m[37mH2[0m │[37m [0m[37m     I2[0m │
└────┴────┴────┴─────────┴────┴────┴────┴────┴─────────┘"
`;

exports[`Grouped columns headers should render placeholders spanning multiple columns 1`] = `
"                              ┌─────────┐
 [37m [0m[01m                           [0m │[37m [0m[01m  G1   [0m │[37m [0m[01m            [0m  
┌────┬────┬────┬─────────┬────┼────┬────┼────┬─────────┐
│[37m [0m[01m A[0m │[37m [0m[01m B[0m │[37m [0m[01m C[0m │[37m [0m[01m      D[0m │[37m [0m[01m E[0m │[37m [0m[01m F[0m │[37m [0m[01m G[0m │[37m [0m[01m H[0m │[37m [0m[01m      I[0m │
├────┼────┼────┼─────────┼────┼────┼────┼────┼─────────┤
│[37m [0m[37mA1[0m │[37m [0m[37mB1[0m │[37m [0m[37mC1[0m │[37m [0m[37m     D1[0m │[37m [0m[37mE1[0m │[37m [0m[37mF1[0m │[37m [0m[37mG1[0m │[37m [0m[37mH1[0m │[37m [0m[37mI 00001[0m │
│[37m [0m[37mA2[0m │[37m [0m[37mB2[0m │[37m [0m[37mC2[0m │[37m [0m[37mD 00002[0m │[37m [0m[37mE2[0m │[37m [0m[37mF2[0m │[37m [0m[37mG2[0m │[37m [0m[37mH2[0m │[37m [0m[37m     I2[0m │
└────┴────┴────┴─────────┴────┴────┴────┴────┴─────────┘"
`;

exports[`Grouped columns headers should render single group 1`] = `
"┌──────────────────────────────────────────────────────┐
│[37m [0m[01m                         G1                         [0m │
├────┬────┬────┬─────────┬────┬────┬────┬────┬─────────┤
│[37m [0m[01m A[0m │[37m [0m[01m B[0m │[37m [0m[01m C[0m │[37m [0m[01m      D[0m │[37m [0m[01m E[0m │[37m [0m[01m F[0m │[37m [0m[01m G[0m │[37m [0m[01m H[0m │[37m [0m[01m      I[0m │
├────┼────┼────┼─────────┼────┼────┼────┼────┼─────────┤
│[37m [0m[37mA1[0m │[37m [0m[37mB1[0m │[37m [0m[37mC1[0m │[37m [0m[37m     D1[0m │[37m [0m[37mE1[0m │[37m [0m[37mF1[0m │[37m [0m[37mG1[0m │[37m [0m[37mH1[0m │[37m [0m[37mI 00001[0m │
│[37m [0m[37mA2[0m │[37m [0m[37mB2[0m │[37m [0m[37mC2[0m │[37m [0m[37mD 00002[0m │[37m [0m[37mE2[0m │[37m [0m[37mF2[0m │[37m [0m[37mG2[0m │[37m [0m[37mH2[0m │[37m [0m[37m     I2[0m │
└────┴────┴────┴─────────┴────┴────┴────┴────┴─────────┘"
`;

exports[`Grouped columns headers should throw when total table width is narrower than total width of group headers being one too large group header 1`] = `"Grouped columns width (99) exceeds total columns width (9)"`;

exports[`Grouped columns headers should throw when total table width is narrower than total width of group headers being one too large placeholder 1`] = `"Grouped columns width (99) exceeds total columns width (9)"`;

exports[`Grouped columns headers should throw when total table width is narrower than total width of group headers ending with a group header 1`] = `"Grouped columns width (10) exceeds total columns width (9)"`;

exports[`Grouped columns headers should throw when total table width is narrower than total width of group headers ending with a placeholder 1`] = `"Grouped columns width (10) exceeds total columns width (9)"`;
